--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "umi-request": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/qs": "^6.9.7",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
