--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,14 @@
 /src/.umi-production
 /src/.umi-test
 /dist
+/.umirc.ts
+/.DS_Store
 
 /npm-debug.log*
 /npm-debug.log*
 /yarn-error.log
 /yarn.lock
 # misc
-.DS_Store
 
+.DS_Store
+.umirc.ts
