--- a/package.json
+++ b/package.json
@@ -1,44 +1,49 @@
 {
-  "private": true,
-  "author": "yibeiqwq <342892988@qq.com>",
-  "scripts": {
-    "dev": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi setup",
-    "setup": "umi setup",
-    "start": "npm run dev"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
-  },
-  "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
-    "@emoji-mart/data": "^1.1.2",
-    "@emoji-mart/react": "^1.1.1",
-    "antd": "^4.23.6",
-    "emoji-mart": "^5.5.2",
-    "lodash": "^4.17.21",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "umi": "^4.0.25",
-    "umi-request": "^1.4.0"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.197",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0"
-  }
+    "private": true,
+    "author": "yibeiqwq <342892988@qq.com>",
+    "scripts": {
+        "dev": "max dev",
+        "build": "max build",
+        "postinstall": "max setup",
+        "setup": "max setup",
+        "start": "npm run dev"
+    },
+    "gitHooks": {
+        "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,jsx,less,md,json}": [
+            "prettier --write"
+        ],
+        "*.ts?(x)": [
+            "prettier --parser=typescript --write"
+        ]
+    },
+    "dependencies": {
+        "@ant-design/pro-layout": "^6.5.0",
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
+        "@umijs/max": "^4.0.0",
+        "@umijs/plugins": "^4.0.78",
+        "antd": "^4.23.6",
+        "crypto-js": "^4.1.1",
+        "emoji-mart": "^5.5.2",
+        "lodash": "^4.17.21",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "umi-request": "^1.4.0",
+        "uuidv4": "^6.2.13"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.197",
+        "@types/qs": "^6.9.7",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/node": "^18.11.11",
+        "lint-staged": "^10.0.7",
+        "prettier": "^2.2.0",
+        "typescript": "^4.1.2",
+        "yorkie": "^2.0.0"
+    },
+    "__npminstall_done": false
 }
