--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
         "@emoji-mart/react": "^1.1.1",
         "@umijs/max": "^4.0.0",
         "@umijs/plugins": "^4.0.78",
-        "antd": "^4.23.6",
+        "antd": "^5.15.3",
         "crypto-js": "^4.1.1",
+        "dayjs": "^1.11.10",
         "emoji-mart": "^5.5.2",
         "lodash": "^4.17.21",
         "react": "^18.0.0",
@@ -36,10 +37,10 @@
     },
     "devDependencies": {
         "@types/lodash": "^4.14.197",
+        "@types/node": "^18.11.11",
         "@types/qs": "^6.9.7",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
-        "@types/node": "^18.11.11",
         "lint-staged": "^10.0.7",
         "prettier": "^2.2.0",
         "typescript": "^4.1.2",
