--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "umi-request": "^1.4.0",
-        "uuidv4": "^6.2.13"
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/lodash": "^4.14.197",
